# minizinc

./: README.md  minizinc.cabal
src/Language/: MiniZinc.hs
src/Language/MiniZinc/: Builder.hs  Print.hs  Syntax.hs
src/Language/MiniZinc/Builder/: Internal.hs  Types.hs
test/: Aust.hs  Sudoku.hs  Test.hs
