name:                minizinc
version:             0.0.1.0
synopsis:            Haskell representation of the MiniZinc language
homepage:            https://github.com/expipiplus1/minizinc
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          satisfied@monoid.al
copyright:           Joe Hermaszwski 2015
category:            Language
build-type:          Simple
extra-source-files:
  .gitignore
  stack.yaml
cabal-version:       >=1.10

library
  exposed-modules:
    Language.MiniZinc
    Language.MiniZinc.Print
    Language.MiniZinc.Syntax
  other-extensions:
    DataKinds,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    MultiParamTypeClasses,
    OverloadedStrings,
    OverloadedLists,
    TypeFamilies
  build-depends:
    base >=4.8 && <4.9,
    dlist >=0.7 && <0.8,
    HList >=0.4 && <0.5,
    mtl >=2.0 && <2.3,
    text >=1.2 && <1.3,
    wl-pprint-text >= 1.1 && <1.2
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite aust
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Aust.hs
  build-depends:
    base >= 4 && <5,
    text >=1.2 && <1.3,
    minizinc
  ghc-options:
    -Wall -threaded
