name:                minizinc
version:             0.0.1.0
synopsis:            Haskell representation of the MiniZinc language
homepage:            https://github.com/expipiplus1/minizinc
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          satisfied@monoid.al
copyright:           Joe Hermaszwski 2015
category:            Language
build-type:          Simple
extra-source-files:
  .gitignore
  README.md
  stack.yaml
cabal-version:       >=1.10

library
  exposed-modules:
    Language.MiniZinc
    Language.MiniZinc.Builder
    Language.MiniZinc.Builder.Internal
    Language.MiniZinc.Builder.Types
    Language.MiniZinc.Print
    Language.MiniZinc.Syntax
  other-extensions:
    DataKinds,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    MultiParamTypeClasses,
    OverloadedStrings,
    OverloadedLists,
    TypeFamilies
  build-depends:
    base >=4.8 && <4.9,
    array >=0.5 && <0.6,
    dlist >=0.7 && <0.8,
    HList >=0.4 && <0.5,
    mtl >=2.0 && <2.3,
    process >=1.2 && <1.3,
    singletons >=1.0 && <2.1,
    temporary >=1.2 && <1.3,
    transformers >=0.4 && <0.5,
    text >=1.2 && <1.3,
    wl-pprint-text >=1.1 && <1.2
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Test.hs
  other-modules:
    Aust
    Sudoku
  build-depends:
    base >=4 && <5,
    array >=0.5 && <0.6,
    minizinc,
    mtl >=2.0 && <2.3,
    tasty >=0.10 && <0.12,
    tasty-th >=0.1 && <0.2,
    tasty-hunit >=0.9 && <0.10,
    text >=1.2 && <1.3,
    transformers >=0.4 && <0.5
  ghc-options:
    -Wall -threaded
